Mon Nov 10 14:20:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/Bug_3481_Regression:

          Fixed the Fuzz errors fro this commit.

Fri Nov  7 22:28:08 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_visitor_structure/serializer_op_ch.cpp:
        * TAO_IDL/be/be_visitor_structure/serializer_op_cs.cpp:

          Added a new generated function to the DDS support (-Gdcps).

        * TAO_IDL/tao_idl.mpc:

          "install" is a deprecated MPC keyword, changed it to "exeout".

Fri Nov  7 17:57:34 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * tests/Bug_3481_Regression:

          Added a test for this bug.

Thu Nov  6 19:52:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3108_Regression/run_test.pl
          Fixed a bug in this file

Thu Nov  6 16:37:30 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * docs/compiler.html:
        * TAO_IDL/be/be_global.cpp:

          Added CIAO_ROOT/ccm to TAO specific directories in tao_idl
          help.

        * TAO_IDL/driver/drv_mcpp_preproc.cpp:
        * TAO_IDL/driver/drv_preproc.cpp:

          Added more comments in the code about the need to update
          IDL_GlobalData::validate_orb_include when new folders are
          added.

        * TAO_IDL/util/utl_global.cpp:

          Fixed the issue introduced in the commit on
          'Mon Nov  3 20:11:55 UTC 2008'.

Wed Nov  5 09:03:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Portable_Interceptors/Bug_2510_Regression/run_test.pl:
        * tests/Portable_Interceptors/Bug_3080/client.cpp:
          Fixed these tests again

Tue Nov  4 13:37:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Hello/run_test.pl
        * tests/Portable_Interceptors/Bug_2133/run_test.pl
        * tests/Portable_Interceptors/Bug_2510_Regression/run_test.pl
        * tests/Portable_Interceptors/Bug_3080/run_test.pl